# luce

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  SPEC.md  package-lock.json
.claude/skills/: lint-format.md  pr-review.md  pr.md  test.md
bruno-collections/: README.md  bruno.json
bruno-collections/luce-api/: Create Task with Dependencies.bru  Delete Task.bru  Error Cases.bru  Get Ready Tasks.bru  Health Check.bru  List In Progress Tasks.bru  Update Task.bru
collections/luce-api/: Create Task.bru  Get Task.bru  List Completed Tasks.bru  List Tasks.bru  Mark Task Completed.bru  bruno.json
collections/luce-api/environments/: local.bru
collections/luce-api/workflows/: Complete Test Flow.bru
src/api/: Cargo.toml
src/api/src/: lib.rs  main.rs  server.rs  services.rs
src/api/src/handlers/: attachments.rs  credentials.rs  integrations.rs  mod.rs  tasks.rs
src/api/tests/: integration_tests.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/commands/: credential.rs  graph.rs  integration.rs  mod.rs  session.rs  task.rs
src/cli/src/services/: luce_service.rs  mod.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/repositories/: credentials_sqlite.rs  dependency_sqlite.rs  graph_sqlite.rs  mod.rs  task_sqlite.rs
src/core/src/services/: credential_service.rs  mod.rs
src/core/src/usecases/: mod.rs  use_case.rs
src/core/src/usecases/credential/: create_credential.rs  delete_credential.rs  get_credential.rs  get_credential_data.rs  list_credentials.rs  mod.rs  update_credential.rs
src/core/src/usecases/graph/: add_dependency.rs  add_task_to_graph.rs  calculate_parallel_opportunities.rs  complete_task.rs  create_graph.rs  delete_graph.rs  detect_cycles.rs  fail_task.rs  get_available_tasks.rs  get_blocked_tasks.rs  get_graph_statistics.rs  get_leaf_tasks.rs  get_ready_tasks.rs  get_root_tasks.rs  get_topological_sort.rs  graph_exists.rs  list_graphs.rs  load_graph.rs  mod.rs  optimize_for_parallel_execution.rs  remove_dependency.rs  remove_task_from_graph.rs  save_graph.rs
src/core/src/usecases/task/: assign_session.rs  create_task.rs  get_task.rs  list_tasks.rs  mod.rs  update_task_status.rs
src/integrations/: Cargo.toml
src/integrations/src/: events.rs  github.rs  lib.rs  linear.rs  manager.rs  slack.rs  sync.rs  webhooks.rs
src/integrations/tests/: integration_tests.rs
src/mcp/: Cargo.toml
src/mcp/src/: handlers.rs  http.rs  lib.rs  main.rs  protocol.rs  server.rs
src/migrations/: Cargo.toml  README.md
src/migrations/migrations/: 20250320174208_first_migration.sql
src/migrations/src/: applier.rs  generator.rs  lib.rs  migration.rs
src/shared/: Cargo.toml  FEATURES.md
src/shared/src/: attachments.rs  config.rs  credentials.rs  dependency.rs  error.rs  events.rs  graph.rs  lib.rs  task.rs
src/ui/: .gitignore  Cargo.toml  FEATURES.md  index.html  package-lock.json  package.json  tailwind.config.js
src/ui/src/: App.tsx  index.css  lib.rs
src/ui/src/components/: mod.rs
src/ui/src/components/credentials/: credential-card.tsx  credential-modal.tsx
src/ui/src/components/integrations/: integration-card.tsx
src/ui/src/components/layout/: app.rs  header.rs  header.tsx  mod.rs
src/ui/src/components/task/: add-task-modal.tsx  add_task_modal.rs  board-background.tsx  mod.rs  status-badge.tsx  status_badge.rs  task-attachments.tsx  task-card.tsx  task-node.tsx  task_card.rs
src/ui/src/components/ui/: badge.rs  badge.tsx  button.rs  card.rs  dialog.rs  input.rs  mod.rs  select.rs  tabs.rs  textarea.rs
src/ui/src/hooks/: mod.rs  use-credentials.ts  use-integrations.ts  use-tasks.ts  use_tasks.rs  use_view_state.rs
src/ui/src/lib/: layout.ts
src/ui/src/services/: api.ts
src/ui/src/types/: attachment.ts  credentials.ts  integration.ts  task.ts
src/ui/src/views/: credentials-view.tsx  graph-view.tsx  graph_view.rs  integrations-view.tsx  list-view.tsx  list_view.rs  mod.rs
