[workspace]
members = [
    "src/shared",
    "src/cli",
    "src/mcp",
    "src/ui",
    "src/core",
    "src/migrations",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
yew = "0.21"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo = "0.8"
