[package]
name = "luce-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luce-api"
path = "src/main.rs"

[dependencies]
luce-shared = { path = "../shared" }
luce-core = { path = "../core" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = "1.0"
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"