[package]
name = "luce-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luce-cli"
path = "src/main.rs"

[dependencies]
luce-shared = { path = "../shared" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }