[package]
name = "luce-core"
version = "0.1.0"
edition = "2021"

[dependencies]
luce-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
luce-migrations = { path = "../migrations" }
tempfile = "3.0"