[package]
name = "luce-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luce-mcp"
path = "src/main.rs"

[dependencies]
luce-shared = { path = "../shared" }
luce-core = { path = "../core" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
futures-util = "0.3"
mime = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.0"
luce-migrations = { path = "../migrations" }