[package]
name = "luce-ui"
version = "0.1.0"
edition = "2021"

# This package is now a React TypeScript frontend built with Vite
# The Rust package serves as a placeholder to maintain workspace structure
# Actual UI development happens in the src/ directory with npm/yarn

[lib]
name = "luce_ui_placeholder"
path = "src/lib.rs"

[dependencies]
# Minimal dependencies for workspace compatibility
serde = { workspace = true }